rns-lang/test_data/integration/error/lexer/directives/dot_dot_super.rns
dot_dot_super ..super